[project]
name = "qdrant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastembed",
    "fastapi>=0.112.2",
    "pydantic-settings>=2.4.0",
    "qdrant-client[fastembed]>=1.5.0",
    "pymupdf>=1.24.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
